--- a/carta/css/card.css
+++ b/carta/css/card.css
@@ -1,235 +1,135 @@
+body {
+  background-color: #ffffff;
+}
+
 .card {
-    box-shadow: inset 0 0 10px #000000;
-    background-color: deepskyblue;
-    margin: 50px;
-    border: 15px solid gold;
-    border-radius: 15px;
-    height: 610px;
-    width: 450px;
-    font-family: "Gill Sans MT", Arial, Helvetica, sans-serif;
+  box-shadow: inset 0 0 10px #000000;
+  background-color: deepskyblue;
+  margin: 50px;
+  border: 15px solid gold;
+  border-radius: 15px;
+  height: 610px;
+  width: 450px;
+  font-family: "Gill Sans MT", Arial, Helvetica, sans-serif;
 }
-
-.atack {
-    margin-top: 15px;
+.card .header {
+  font-weight: bold;
 }
-
-.titleCard {
-    font-weight: bold;
-    font-size: 2em;
+.card .header .name {
+  font-size: 2em;
 }
-
-.hpText {
-    font-weight: bold;
+.card .header .levelLabel {
+  font-size: 12px;
 }
-
-.hp {
-    font-weight: bold;
-    font-size: 2em;
-    position: relative;
-    top: 3px;
+.card .header .levelValue {
+  position: relative;
+  right: 3px;
+  font-size: 15px;
 }
-
-.type {
-    position: relative;
-    top: -3px;
+.card .header .leftSide {
+  text-align: right;
 }
-
-.lefHeader {
-    text-align: right;
+.card .header .leftSide .hpValue {
+  font-size: 2em;
+  position: relative;
+  top: 3px;
 }
-
-.imgCard {
-    box-shadow: inset 0 0 10px #000000;
-    position: relative;
-    margin: 0 auto;
-    border: 8px solid lightgray;
-    border-bottom-width: 0;
-    background-image: url('../images/mainImage.png');
-    width: 400px;
-    height: 253px;
+.card .header .leftSide img {
+  position: relative;
+  top: -3px;
+  height: 30px;
+  width: 30px;
 }
-
-.footerImgCard {
-
-    position: absolute;
-    left: -11px;
-    bottom: -10px;
-    text-align: center;
-    font-size: 10px;
-    margin: 0 auto;
-    width: 404px;
-    height: 18px;
-    font-style: italic;
-    line-height: 2;
-    border-radius: 175px 20px 266px 132px;
-    background-image: url("../images/backgroundLine.png");
+.card .picture {
+  box-shadow: inset 0 0 10px #000000;
+  position: relative;
+  margin: 0 auto;
+  border: 8px solid lightgray;
+  border-bottom-width: 0;
+  background-image: url("../images/mainImage.png");
+  width: 400px;
+  height: 253px;
 }
-
-.basic {
-    position: absolute;
-    left: -14px;
-    top: -10px;
-    padding-left: 10px;
-    font-weight: bold;
-    font-size: 13px;
-    display: inline-block;
-    border-radius: 132px 20px 136px 1px;
-    background-image: url("../images/backgroundLine.png");
-    width: 85px;
-    line-height: 1.7;
-    height: 19px;
+.card .picture .cardType {
+  position: absolute;
+  left: -14px;
+  top: -10px;
+  padding-left: 10px;
+  font-weight: bold;
+  font-size: 13px;
+  display: inline-block;
+  border-radius: 132px 20px 136px 1px;
+  background-image: url("../images/backgroundLine.png");
+  width: 85px;
+  line-height: 1.7;
+  height: 19px;
 }
-
-.titleAtack {
-    font-weight: bold;
-    font-size: 23px;
-    position: relative;
-    left: -20px;
+.card .picture .description {
+  position: absolute;
+  left: -11px;
+  bottom: -10px;
+  text-align: center;
+  font-size: 10px;
+  margin: 0 auto;
+  width: 404px;
+  height: 18px;
+  font-style: italic;
+  line-height: 2;
+  border-radius: 175px 20px 266px 132px;
+  background-image: url("../images/backgroundLine.png");
 }
-
-.imgAtack {
-    position: relative;
-    top: 5px;
+.card .firstAtack {
+  margin-top: 15px;
+  padding-top: 4px;
 }
-
-.textAtack {
-    position: relative;
-    top: -2px;
-    font-size: 14px;
-    padding-right: 0;
+.card .firstAtack img {
+  position: relative;
+  top: 5px;
+  height: 23px;
+  width: 23px;
+}
+.card .firstAtack .title {
+  font-weight: bold;
+  font-size: 23px;
+  position: relative;
+  left: -20px;
+}
+.card .firstAtack .atackDescription {
+  position: relative;
+  top: -2px;
+  font-size: 14px;
+  padding-right: 0;
+}
+.card .secondAtack {
+  position: relative;
+  top: -5px;
+  margin-top: 15px;
+}
+.card .secondAtack .imgAtack {
+  position: relative;
+  top: 5px;
 }
 
 .hit {
-    position: relative;
-    bottom: -5px;
-    left: 10px;
-    font-weight: bold;
-    font-size: 20px;
+  position: relative;
+  bottom: -5px;
+  left: 10px;
+  font-weight: bold;
+  font-size: 20px;
 }
 
-.line {
-    margin-top: 15px;
-    margin-bottom: 3px;
-    border-radius: 132px 20px 266px 132px;
-    height: 5px;
-}
-
-.textabout {
-    margin: 0 auto;
-    border-radius: 2px;
-}
-
-.author {
-    border-radius: 199px 20px 266px 132px;
-    background-image: url("../images/authorBackground.png");
-    line-height: 1.8;
-    position: relative;
-    font-style: italic;
-    padding-left: 5px;
-    font-size: 9px;
-    width: 210px;
-    display: inline-block;
-    height: 14px;
-    padding-right: 13px;
-    text-align: right;
-    margin-top: 5px;
-    right: 212px;
-}
-
-.footerFonts {
-    margin-top: 5px;
-    text-align: center;
-    font-size: 10px;
-    font-weight: bold;
-}
-
-.imgFooter {
-    text-align: center;
-    position: relative;
-    top: -8px;
-}
-
-.footDamage {
-    font-weight: bold;
-    position: relative;
-    top: 2px;
-}
-
-.damage {
-    padding-left: 25px;
-}
-
-.footerText {
-    position: relative;
-    top: -5px;
-    font-size: 10px;
-}
-
-.cornerCircle {
-    position: relative;
-    top: -13px;
-    right: -58px;
-}
-
-.rightText {
-    text-align: right;
-    position: relative;
-    top: -6px;
-    font-size: 11px;
-    font-weight: bold;
-    right: -38px;
-}
-
-.centerText {
-    position: relative;
-    left: 43px;
-    font-size: 9px;
-}
-
-.leftText {
-    font-weight: bold;
-    font-size: 9px;
-
+.titleAtack {
+  font-weight: bold;
+  font-size: 23px;
+  position: relative;
+  left: -20px;
 }
 
 .plus {
-    position: relative;
-    font-size: 16px;
-    left: 7px;
-    top: 6px;
+  position: relative;
+  font-size: 16px;
+  left: 7px;
+  top: 6px;
 }
 
-.imageTextBotton {
-    padding-top: 4px;
-}
-
-.betweenTexts {
-    position: relative;
-    top: -5px;
-}
-
-.textAboutPokemon {
-    font-style: italic;
-    font-size: 12px;
-}
-
-.textLv {
-    font-size: 12px;
-    font-weight: bold;
-}
-
-.numberLvl {
-    position: relative;
-    right: 3px;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.energyBar {
-    position: relative;
-    top: -6px
-}
-
-body {
-    background-color: #ffffff;
-}
+/*# sourceMappingURL=card.css.map */
